@@ -143,7 +143,6 @@ export(theme_counterclockwise)
 export(theme_custom)
 export(theme_dark)
 export(theme_darker)
-export(theme_get)
 export(theme_ggtern)
 export(theme_gray)
 export(theme_gridsonbottom)
@@ -180,7 +179,6 @@ export(theme_novar_tern)
 export(theme_rgbg)
 export(theme_rgbw)
 export(theme_rotate)
-export(theme_set)
 export(theme_showarrows)
 export(theme_showgrid)
 export(theme_showgrid_major)
